[gd_scene load_steps=4 format=3 uid="uid://d3ro0rdbnkf6"]

[ext_resource type="Script" path="res://scripts/Roots.gd" id="1_rtp6k"]
[ext_resource type="PackedScene" uid="uid://xm0ofe0xm664" path="res://scenes/RootSection.tscn" id="2_i6o6a"]
[ext_resource type="Texture2D" uid="uid://b7qwcccb4jt0f" path="res://assets/images/Arrow.png" id="3_v3vgi"]

[node name="Root" type="Node2D"]
script = ExtResource("1_rtp6k")

[node name="RootList" type="Node2D" parent="."]

[node name="RootSection" parent="RootList" instance=ExtResource("2_i6o6a")]

[node name="Target" type="Sprite2D" parent="."]
scale = Vector2(0.242188, 0.210938)
texture = ExtResource("3_v3vgi")
offset = Vector2(16, 0)

[node name="GhostLine" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 0, 100)
width = 3.0

[connection signal="water_gathered" from="RootList/RootSection" to="." method="_on_root_section_water_gathered"]
